Add JVM add-opens to fix cassandra-integration-smoke-test