@@ -2589,11 +2589,15 @@
             </activation>
             <properties>
                 <air.test.jvm.additional-arguments>
+                    --add-opens java.base/java.io=ALL-UNNAMED
                     --add-opens java.base/java.lang=ALL-UNNAMED
                     --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                     --add-opens java.base/java.net=ALL-UNNAMED
+                    --add-opens java.base/java.nio=ALL-UNNAMED
                     --add-opens java.base/java.text=ALL-UNNAMED
                     --add-opens java.base/java.util=ALL-UNNAMED
+                    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                    --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                 </air.test.jvm.additional-arguments>
             </properties>
         </profile>
